--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+			My current favourite song is
+			<a href="https://youtu.be/HnLtNrvfZTU?si=6EJQng5o6wO2xuDe" target="_blank">
+			lag ja gale
+			</a>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
